// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`execute dnsProof endpoint error calls when successfully requests the API should throw and exception if the response is malformed 1`] = `
{
  "error": {
    "feedID": "{"data":{"endpoint":"dnsProof","name":"www5.infernos.io","record":"0xf75519f611776c22275474151a04183665b7feDe"}}",
    "message": "Unexpected response from API. Response: linkpool was not an array.",
    "name": "AdapterError",
  },
  "jobRunID": "1",
  "status": "errored",
  "statusCode": 200,
}
`;

exports[`execute dnsProof endpoint error calls when unsuccessfully requests the API should throw and exception 1`] = `
{
  "error": {
    "feedID": "{"data":{"endpoint":"dnsProof","name":"www5.infernos.io","record":"0xf75519f611776c22275474151a04183665b7feDe"}}",
    "message": "Request failed with status code 500",
    "name": "AdapterError",
    "url": "https:/dns.google/resolve",
  },
  "jobRunID": "1",
  "providerStatusCode": 500,
  "status": "errored",
  "statusCode": 200,
}
`;

exports[`execute dnsProof endpoint success calls returns the result 1`] = `
{
  "data": {
    "result": true,
  },
  "jobRunID": "1",
  "providerStatusCode": 200,
  "result": true,
  "statusCode": 200,
}
`;
